profile btn style updates

--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -291,6 +291,9 @@
                             @media ($sm-1199) {
                                 max-width: 15px;
                             }
+                            @media ($sm-767) {
+                                max-width: 12px;
+                            }
                         }
                     }
                     .txt{
