--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -6,7 +6,7 @@
             width: 29px;
             height: 29px;
             border-radius: 29px;
-            background-image: url(../img/modal-close-btn.svg);
+            background-image: url("../images/modal-close-btn.svg");
             background-repeat: no-repeat;
             background-position: center;
             background-color: #F2F5FA;
