--- a/src/assets/scss/signin.scss
+++ b/src/assets/scss/signin.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     padding: 43px 44px;
-    background: url(../images/login-bottom-img.png) #fff no-repeat bottom right;
+    background: url("../images/login-bottom-img.png") #fff no-repeat bottom right;
     background-size: 320px;
     @media ($sm-1679){
         padding: 30px;
