--- a/src/assets/scss/usermanagement.scss
+++ b/src/assets/scss/usermanagement.scss
@@ -339,7 +339,7 @@
                         color: #8897AD;
                     }
                     .form-check-input:checked[type=radio]{
-                        background-image: url(../img/radio-checked.svg) ;
+                        background-image: url("../images/radio-checked.svg") ;
                         background-color: transparent;
                     }
                 }
