--- a/src/assets/scss/add-inventory.scss
+++ b/src/assets/scss/add-inventory.scss
@@ -177,8 +177,40 @@
     display: flex;
     align-items: center;
     margin-bottom: 33px;
-    @media ($sm-579){
+    @media (max-width:700px){
         flex-direction: column;
+    }
+
+    .part-col-title{
+        max-width: 342px;
+        width: 100%;
+        @media (max-width:700px){
+            width: 100%;
+            max-width: 100%;
+            margin-left: 0px;
+        }
+        .form-control{
+            @media (max-width:700px){
+                width: 100%;
+                max-width: 100%;
+            }
+        }
+    }
+    .part-col-label{
+        max-width: 244px;
+        width: 100%;
+        margin-left: 19px;
+        @media (max-width:700px){
+            width: 100%;
+            max-width: 100%;
+            margin-left: 0px;
+        }
+        .form-control{
+            @media (max-width:700px){
+                width: 100%;
+                max-width: 100%;
+            }
+        }
     }
     .form-control{
         max-width:652px ;
@@ -201,12 +233,18 @@
         }
       
     }
+    .add-btn-wrp{
+        @media (max-width:700px){
+            width: 100%;
+            margin-left: 0px;
+        }
+    }
     .add-btn{
         flex-grow: 1;
         height: 38px;
         border: 1px dashed #0096DF;
         background-color:#0096DF17;
-        margin-left: 17px;
+        margin-left: 12px;
         font-weight: 400;
         font-size: 12px;
         color: #0397E0;
@@ -214,11 +252,14 @@
         align-items: center;
         justify-content: center;
         flex-shrink: 0;
-        width: 100px;
-        margin-left: auto;
+        width: 132px;
         @media($sm-1679){
             height: 34px;
             font-size: 11px;
+            width: 100px;
+        }
+        @media (max-width:700px){
+            margin-left: auto;
         }
         @media ($sm-579){
             width: 100%;
