--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -108,6 +108,7 @@
         }
         .content-wrp-outer{
             display: flex;
+            flex-direction: column;
             align-items: stretch;
             padding: 25px;
             max-height: calc(100vh - 70px);
@@ -125,6 +126,13 @@
             }
             @media ($sm-767){
                 max-height: calc(100vh - 150px);
+            }
+            .dash-top{
+                display: flex;
+                width: 100%;
+                @media ($sm-991){
+                    flex-direction: column;
+                }
             }
             .panel-wrp{
                 display: flex;
@@ -156,6 +164,7 @@
                     flex-direction: column;
                     justify-content: center;
                     color: $white;
+                    margin: 7px 0;
                     @media ($sm-1679){
                         padding: 0 40px;
                     }
@@ -235,13 +244,24 @@
                 .count-blk{
                     width: calc((100% / 2) - 14px);
                     border-radius: 17px;
-                    background-color: $dashbordBlkBg;
                     padding: 30px 26px;
                     display: flex;
                     flex-wrap: wrap;
                     margin: 7px;
                     height: 133px;
                     align-items: center;
+                    &.user{
+                        background: url(../images/dating_dash.svg) no-repeat right bottom #F0F9FD;
+                    }
+                    &.inventory{
+                        background: url(../images/inventory_ic.svg) no-repeat right bottom #F0F9FD;
+                    }
+                    &.returned{
+                        background: url(../images/retun_ic.svg) no-repeat right bottom #F0F9FD;
+                    }
+                    &.borrowed{
+                        background: url(../images/cuurently.svg) no-repeat right bottom #F0F9FD;
+                    }
                     @media ($sm-1679){
                         padding: 24px;
                     }
@@ -322,6 +342,232 @@
                             }
                             @media ($sm-1199){
                                 font-size: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+            .dash-table-wrp{
+                display: flex;
+                flex-wrap: wrap;
+                row-gap: 17px;
+                width: 100%;
+                justify-content: space-between;
+                margin-top: 27px;
+                .table-wrp{
+                    background-color: #D8E1ED36;
+                    border-radius: 16px;
+                    width: calc((100% / 2) - 17px);
+                    padding: 16px;
+                    .top-blk{
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 26px;
+                        .btn-view{
+                            font-size: 13px;
+                            border-radius: 15px;
+                            height: 30px;
+                            background-color: #0096df;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            color: #fff;
+                            width: 90px;
+                            margin-left: auto;
+                        }
+                    }
+                    .left-wrap {
+                        margin-right: 20px;
+                        @media (max-width:850px){
+                            margin-bottom: 20px;
+                        }
+                        .icon-title {
+                            display: flex;
+                            align-items: center;
+                            gap: 15px;
+                            .img {
+                                width: 47px;
+                                @media ($sm-1679){
+                                    width: 42px;
+                                    height: 42px;
+                                    border-radius: 42px; 
+                                }
+                                @media ($sm-1441){
+                                    width: 38px;
+                                    height: 38px;
+                                    border-radius: 38px; 
+                                }
+                                @media ($sm-1199){
+                                    width: 36px;
+                                    height: 36px;
+                                    border-radius: 36px; 
+                                }
+                                @media ($sm-991){
+                                    width: 34px;
+                                    height: 34px;
+                                    border-radius: 34px; 
+                                }
+                                img{
+                                    max-width: 20px;
+                                    @media ($sm-1679){
+                                        max-width: 18px;
+                                    }
+                                    @media ($sm-1199){
+                                        max-width: 16px;
+                                    }
+                                }
+                            }
+                            span {
+                                font-size: 18px;
+                                color: #0096df;
+                                font-weight: 500;
+                                @media ($sm-1679) {
+                                    font-size: 16px;
+                                }
+                                @media ($sm-1199) {
+                                    font-size: 15px;
+                                }
+                                @media ($sm-767) {
+                                    font-size: 14px;
+                                }
+                            }
+                        }
+                    }
+                    .table-responsive{
+                        max-height: 315px;
+                    }
+                    .table{
+                        &.table-striped>tbody>tr:nth-of-type(odd)>*{
+                            background-color: #fff !important;
+                        }
+                        &.table-striped>tbody>tr:nth-of-type(even)>*{
+                            background-color: #F6F8FB!important;
+                        }
+                        td,th{
+                            font-size: 13px;
+                            padding: 16px 10px;
+                            vertical-align: middle;
+                            color: #000000;
+                        }
+                        .user-pic {
+                            display: flex;
+                            align-items: center;
+                            gap: 15px;
+                            figure {
+                                width: 40px;
+                                height: 40px;
+                                flex: 0 0 40px;
+                                margin: 0;
+                                @media ($sm-1679) {
+                                    width: 38px;
+                                    height: 38px;
+                                    flex: 0 0 38px;
+                                }
+                                @media ($sm-1441) {
+                                    width: 36px;
+                                    height: 36px;
+                                    flex: 0 0 36px;
+                                }
+                                @media ($sm-1199) {
+                                    width: 34px;
+                                    height: 34px;
+                                    flex: 0 0 34px;
+                                }
+                                @media ($sm-991) {
+                                    width: 32px;
+                                    height: 32px;
+                                    flex: 0 0 32px;
+                                }
+                                @media ($sm-579) {
+                                    width: 30px;
+                                    height: 30px;
+                                    flex: 0 0 30px;
+                                }
+                                &.alphabet{
+                                    background-color: #C4C4C440;
+                                    width: 54px;
+                                    height: 54px;
+                                    flex: 0 0 54px;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    border-radius: 54px;
+                                    flex-shrink: 0;
+                                    @media ($sm-1679){
+                                        width: 40px;
+                                        height: 40px;
+                                        flex: 0 0 40px;
+                                    }
+                                    @media ($sm-1441){
+                                        width: 38px;
+                                        height: 38px;
+                                        flex: 0 0 38px;
+                                    }
+                                    @media ($sm-1199){
+                                        width: 36px;
+                                        height: 36px;
+                                        flex: 0 0 36px;
+                                    }
+                                    @media ($sm-991){
+                                        width: 34px;
+                                        height: 34px;
+                                        flex: 0 0 34px;
+                                    }
+                                    @media ($sm-579) {
+                                        width: 30px;
+                                        height: 30px;
+                                        flex: 0 0 30px;
+                                    }
+                                    .txt{
+                                        font-size: 16px;
+                                        color: #216A8D;
+                                        @media ($sm-1679){
+                                            font-size: 15px;
+                                        }
+                                        @media ($sm-1199){
+                                            font-size: 14px;
+                                        }
+                                    }
+                                }
+                                img {
+                                    width: 100%;
+                                    height: 100%;
+                                    object-fit: cover;
+                                    border-radius: 50%;
+                                }
+                            }
+                            span {
+                            }
+                        }
+                        th{
+                            &:first-child{
+                                padding-left: 23px;
+                                border-top-left-radius: 7px;
+                            }
+                            &:last-child{
+                                padding-right: 23px;
+                                border-top-right-radius: 7px;
+                            }
+                            &.th-name{
+                                min-width: 91px;
+                            }
+                            &.th-last-name{
+                                min-width: 128px;
+                            }
+                            &.th-email{
+                                min-width: 150px;
+                            }
+                            &.th-phone{
+                                min-width: 90px;
+                            }
+                            &.th-date{
+                                min-width: 120px;
+                            }
+                            &.th-card{
+                                min-width: 170px;
+                            }
+                            &.th-action{
+                                min-width: 170px;
                             }
                         }
                     }
