--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -361,6 +361,10 @@
                     margin-top: 20px;
                     row-gap: 13px;
                 }
+                @media ($sm-991){
+                    flex-direction: column;
+                    row-gap: 0;
+                }
                 .table-wrp{
                     background-color: #D8E1ED36;
                     border-radius: 16px;
@@ -368,6 +372,16 @@
                     padding: 16px;
                     @media ($sm-1679){
                         width: calc((100% / 2) - 13px);
+                    }
+                    @media ($sm-991){
+                        width: 100%;
+                        margin-bottom: 20px;
+
+                    }
+                    &:last-child{
+                        @media ($sm-991){
+                            margin-bottom: 0;
+                        }
                     }
                     .top-blk{
                         display: flex;
