--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -17,6 +17,7 @@
             right: 30px;
             box-shadow: none;
             outline: none;
+            z-index: 3;
         }
     }
     .modal-body{
