style upadte filter

--- a/src/assets/scss/forms.scss
+++ b/src/assets/scss/forms.scss
@@ -133,6 +133,10 @@
             padding-right: 0px !important;
         }
     }
+    .status-select__option{
+        font-size: 13px;
+        cursor: pointer;
+    }
 }
 .btn-save-trans{
     background-color: $primaryColor;
