style upadte dashboard

--- a/src/assets/scss/settings.scss
+++ b/src/assets/scss/settings.scss
@@ -207,7 +207,8 @@
             gap: 10px;
         }
         .btn {
-            width: 50%;
+            max-width: 388px;
+            width: 100%;
             border-radius: 30px;
             height: 52px;
             background: #dfe6ea;
