style upadte dashboard

--- a/src/assets/scss/signin.scss
+++ b/src/assets/scss/signin.scss
@@ -274,6 +274,9 @@
                 }
                 &.login{
                     max-width: 402px;
+                    @media ($sm-1679){
+                        max-width: 388px;
+                    }
                 }
                 &:not(.login){
                     .form-sec-wrp{
