--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -179,7 +179,9 @@ a{
         }
     }
 }
-
+.text-danger{
+    color: #dc3545;
+}
 .inner-scroll-outer{
     &.settings{
         overflow-y: auto;
