--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -110,6 +110,7 @@
             .img-sec{
                 width: 113px;
                 height: 113px;
+                border-radius: 50%;
                 @media($sm-1679){
                     width: 100px;
                     height: 100px;
@@ -134,6 +135,16 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                }
+                &.alphabet{
+                    background-color: #d8e1ed;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    span{
+                        color: #216A8D;
+                        font-size: 16px;
+                    }
                 }
             }
 
