style upadte dashboard

--- a/src/assets/scss/add-inventory.scss
+++ b/src/assets/scss/add-inventory.scss
@@ -450,7 +450,7 @@
         justify-content: center;
         position: relative;
         .pro-pic{
-            max-width: 100%;
+            max-width: 70px;
             display: block;
         }
         .close-btn{
