--- a/src/assets/scss/usermanagement.scss
+++ b/src/assets/scss/usermanagement.scss
@@ -687,12 +687,13 @@
             }
             .sort-wrap {
                 display: flex;
-                justify-content: space-between;
+                justify-content: flex-start;
                 align-items: center;
                 .sort {
                     display: flex;
                     flex-direction: column;
                     gap: 3px;
+                    margin-left: 10px;
                 }
             }
             tr {
