--- a/src/assets/scss/add-inventory.scss
+++ b/src/assets/scss/add-inventory.scss
@@ -298,7 +298,8 @@
             height: 34px;
         }
         img{
-            max-width: 100%
+            max-width: 15px;
+            opacity: 0.3;
         }
     }
     &.part-sec1{
