--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -695,3 +695,18 @@
     }
 
 }
+
+.PhoneInput{
+    .PhoneInputInput{
+        background-color: transparent !important;
+        border: none;
+        box-shadow: none;
+        outline: none;
+        color: #8897AD;
+        &:focus{
+            border: none;
+            box-shadow: none;
+            outline: none;
+        }
+    }
+}
