--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -96,17 +96,17 @@
                 margin: 10px 10px 0px 10px;
                 border-radius: 40px;
             }
-            &::after{
-                position: absolute;
-                content: "";
-                background-image: url('../images/profile-botm-img.png');
-                width: 235px;
-                height: 130px;
-                background-repeat: no-repeat;
-                bottom: -172px;
-                right: 24px;
+            // &::after{
+            //     position: absolute;
+            //     content: "";
+            //     background-image: url('../images/profile-botm-img.png');
+            //     width: 235px;
+            //     height: 130px;
+            //     background-repeat: no-repeat;
+            //     bottom: -172px;
+            //     right: 24px;
             
-            }
+            // }
             .img-sec{
                 width: 113px;
                 height: 113px;
