--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -480,6 +480,9 @@
                             font-size: 14px;
                             position: absolute;
                         }
+                        .light{
+                            margin-bottom: 5px;
+                        }
                     }
                 }
                 .form-control {
