--- a/src/assets/scss/add-inventory.scss
+++ b/src/assets/scss/add-inventory.scss
@@ -405,6 +405,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 15px;
+    position: relative;
+    margin-bottom: 20px;
     .txt{
         color: #B3C6DD;
         font-weight: 600;
