--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -94,6 +94,7 @@
                     align-items: center;
                     justify-content: center;
                     border-radius: 15px;
+                    position: relative;
                     .txt{
                         color: #B3C6DD;
                         font-weight: 600;
@@ -118,6 +119,13 @@
                         color: #676767;
                 
                     }
+                    .error{
+                        bottom: -20px;
+                        margin-bottom: 0;
+                    }
+                }
+                .uploaded-files-list{
+                    padding-top: 20px;
                 }
                 .download-btn{
                     width: 236px;
