--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -412,6 +412,13 @@
                         display: flex;
                         align-items: center;
                         margin-bottom: 26px;
+                        @media ($sm-1679){
+                            margin-bottom: 20px;
+                        }
+                        @media ($sm-479){
+                            flex-direction: column;
+                           align-items: flex-start;
+                        }
                         .btn-view{
                             font-size: 13px;
                             border-radius: 15px;
@@ -429,6 +436,9 @@
                         margin-right: 20px;
                         @media (max-width:850px){
                             margin-bottom: 20px;
+                        }
+                        @media ($sm-479){
+                            margin-bottom: 10px;
                         }
                         .icon-title {
                             display: flex;
